Closed
Bug 487566
Opened 12 years ago
Closed 12 years ago
OS/2 problems to build qcms
Categories
(Core :: GFX: Color Management, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9.2a1
People
(Reporter: wuno, Assigned: wuno)
References
Details
(Keywords: fixed1.9.1)
Attachments
(1 file, 1 obsolete file)
1.14 KB,
patch
|
mozilla
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (OS/2; U; Warp 4.5; en-US; rv:1.9.2a1pre) Gecko/20090406 Minefield/3.6a1pre Build Identifier: I came across two problems when building the new qcms color management on OS/2 (unfortunately I have clobbered my build log) 1) stdlib.h on OS/2 has already a typedef for uintptr_t (typdefed in qcmstypes.h) -> to not include stdlib.h on OS/2 helps 2) OS/2 is little endian, but that doesn't get picked up Here I wonder why LITTLE_ENDIAN has to be defined for windows, but not for linux using as well LITTLE_ENDIAN byte order Reproducible: Always
Assignee | ||
Updated•12 years ago
|
Version: unspecified → Trunk
Assignee | ||
Comment 1•12 years ago
|
||
Peter, not going for r now, but I'd like to have a comment, if its ok to not include stdlib.h and if we should use another define with regard to the LITTLE_ENDIAN macro, certainly the comment prior to the LITTLE_ENDIAN macro should be changed too.
Assignee: nobody → wuno
Status: NEW → ASSIGNED
Comment 2•12 years ago
|
||
I'd prefer something like the attached. Instead of avoiding stdlib.h on OS/2, I avoid typedefing uintptr_t.
Comment 3•12 years ago
|
||
Comment on attachment 371871 [details] [diff] [review] alternative os/2 patch [Checkin: Comment 5] Thanks Jeff. This works fine for me on OS/2. (I still get some warnings when compiling iccread.c but I guess that's normal.)
Attachment #371871 -
Flags: review+
Updated•12 years ago
|
Keywords: checkin-needed
Assignee | ||
Comment 4•12 years ago
|
||
Just to confirm, Jeff's patch works well. I set this bug to block bug481926 that this fix doesn't get lost, when qcms is checked into the 1.9.1 and eventually 1.9.0 branches.
Blocks: 481926
Comment 5•12 years ago
|
||
Comment on attachment 371871 [details] [diff] [review] alternative os/2 patch [Checkin: Comment 5] http://hg.mozilla.org/mozilla-central/rev/25f74e0b80a6
Attachment #371871 -
Attachment description: alternative os/2 patch → alternative os/2 patch
[Checkin: Comment 5]
Updated•12 years ago
|
Attachment #371810 -
Attachment is obsolete: true
Updated•12 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Flags: in-testsuite-
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
Keywords: fixed1.9.1
You need to log in
before you can comment on or make changes to this bug.
Description
•