Bug 487566 - OS/2 problems to build qcms; r=mozilla@Weilbacher.org