gfx/qcms/iccread.c
@@ -35,6 +35,10 @@ typedef uint16_t __be16;
 #define LITTLE_ENDIAN
 #endif
 
+#ifdef __OS2__
+#define LITTLE_ENDIAN
+#endif
+
 #if !defined(BIG_ENDIAN) && !defined(LITTLE_ENDIAN)
 #error Unknown endianess
 #endif
