gfx/qcms/qcmsint.h
@@ -1,4 +1,3 @@
-#include <stdlib.h>
 #include "qcms.h"
 #include "qcmstypes.h"
 
